--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,12 @@
             "email": "norbert@orzechowicz.pl"
         }
     ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/chives/admin-bundle.git"
-        }
-    ],
     "require": {
-        "php": "^7.1|^8.0",
+        "php": "^7.4|^8.0",
         "doctrine/doctrine-bundle": "^1.5|^2.0",
         "doctrine/orm": "^2.5",
         "doctrine/persistence": "^1.3|^2.0",
-        "fsi/admin-bundle" : "^4.0@dev",
+        "fsi/admin-bundle" : "^3.0",
         "symfony/console": "^4.4|^5.0",
         "symfony/dependency-injection": "^4.4|^5.0",
         "symfony/form": "^4.4|^5.0",
