--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,15 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "doctrine/doctrine-bundle": "^1.5|^2.0",
-        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-cache-bundle": "^1.4.0",
+        "doctrine/doctrine-bundle": "^1.8|^2.0",
+        "doctrine/orm": "^2.7",
         "doctrine/persistence": "^1.3|^2.0",
         "fsi/admin-bundle" : "^3.0",
+        "ocramius/proxy-manager": "^2.7",
         "symfony/console": "^4.4|^5.0",
         "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/doctrine-bridge": "^4.4|^5.0",
         "symfony/form": "^4.4|^5.0",
         "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/property-access": "^4.4|^5.0",
@@ -34,7 +37,7 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
         "behat/symfony2-extension": "^2.1",
-        "egulias/email-validator": "^2.0",
+        "egulias/email-validator": "^3.0",
         "friends-of-phpspec/phpspec-expect": "^3.0|^4.0",
         "phpspec/phpspec": "^5.1|^6.0|^7.0",
         "phpspec/prophecy": "^1.8",
@@ -50,6 +53,12 @@
         "symfony/routing": "^4.4|^5.0",
         "symfony/twig-bridge": "^4.4|^5.0",
         "symfony/var-dumper": "^4.4|^5.0"
+    },
+    "conflict": {
+        "doctrine/doctrine-cache-bundle": "<1.4.0",
+        "fsi/datasource": "<2.1",
+        "symfony/expression-language": "<4.4",
+        "twig/twig": "<1.43"
     },
     "config": {
         "bin-dir": "vendor/bin"
