--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "doctrine/doctrine-cache-bundle": "^1.4.0",
         "doctrine/doctrine-bundle": "^1.8|^2.0",
         "doctrine/orm": "^2.7",
-        "doctrine/persistence": "^1.3",
-        "fsi/admin-bundle" : "^3.0",
+        "doctrine/persistence": "^2.0",
+        "fsi/admin-bundle" : "^4.0@dev",
+        "fsi/data" : "dev-master",
         "symfony/console": "^4.4|^5.0",
         "symfony/dependency-injection": "^4.4|^5.0",
         "symfony/doctrine-bridge": "^4.4|^5.0",
