--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "doctrine/orm": "^2.13",
         "doctrine/persistence": "^2.5|^3.0",
         "fsi/admin-bundle" : "^4.0@dev",
-        "fsi/data": "dev-master",
+        "fsi/data": "^1.0@dev",
         "symfony/console": "^4.4|^5.4",
         "symfony/dependency-injection": "^4.4|^5.4",
         "symfony/doctrine-bridge": "^4.4|^5.4",
